refactor: 레시피에 사용되는 상품 정보 삭제