@@ -13,7 +13,6 @@ import com.funeat.common.dto.PageDto;
 import com.funeat.member.domain.Member;
 import com.funeat.member.domain.favorite.RecipeFavorite;
 import com.funeat.member.dto.MemberRecipeDto;
-import com.funeat.member.dto.MemberRecipeProductDto;
 import com.funeat.member.dto.MemberRecipesResponse;
 import com.funeat.member.exception.MemberException.MemberDuplicateFavoriteException;
 import com.funeat.member.exception.MemberException.MemberNotFoundException;
@@ -143,15 +142,8 @@ public class RecipeService {
 
         final PageDto page = PageDto.toDto(sortedRecipePages);
         final List<MemberRecipeDto> dtos = sortedRecipePages.stream()
-                .map(recipe -> {
-                    final List<RecipeImage> findRecipeImages = recipeImageRepository.findByRecipe(recipe);
-                    final List<Product> productsByRecipe = productRecipeRepository.findProductByRecipe(recipe);
-                    final List<MemberRecipeProductDto> memberRecipeProductDtos = productsByRecipe.stream()
-                            .map(MemberRecipeProductDto::toDto)
-                            .collect(Collectors.toList());
-                    return MemberRecipeDto.toDto(recipe, findRecipeImages, memberRecipeProductDtos);
-                })
-                .collect(Collectors.toList());
+                .map(recipe -> MemberRecipeDto.toDto(recipe, recipeImageRepository.findByRecipe(recipe)))
+                .toList();
 
         return MemberRecipesResponse.toResponse(page, dtos);
     }
